module-system/sov-modules-macros/tests/module_info/derive_on_enum_not_supported.stderr
error: The `ModuleInfo` macro supports structs only.
 --> tests/module_info/derive_on_enum_not_supported.rs:5:1
  |
5 | enum TestStruct<C: sov_modules_api::Context> {
  | ^^^^
